working example of state update in frontend with websocket!
